# verbal-code

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  config.yaml  install.sh  pyproject.toml  requirements.txt  uninstall.sh
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/phases/01-recognition-upgrade/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-CONTEXT.md  01-RESEARCH.md  01-VALIDATION.md  01-VERIFICATION.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
assets/: verbal-code.desktop
cmake/: Dependencies.cmake
config/: default_config.json
scripts/: download_models.sh  install.sh  install_deps.sh  uninstall.sh
specs/: 00-scaffold.md  01-audio-capture.md  02-whisper-transcription.md  03-text-injection.md  04-hotkey-push-to-talk.md  05-vosk-backend.md  06-streaming-transcription.md  07-system-tray.md  08-vad-integration.md  09-install-and-polish.md  10-uninstall.md  11-desktop-entry.md  12-hotkey-editor.md
src/: CMakeLists.txt
src/app/: CMakeLists.txt  application.cpp  application.hpp  main.cpp  transcription_store.cpp  transcription_store.hpp
src/audio/: CMakeLists.txt  audio_buffer.hpp  i_audio_service.hpp  pipewire_audio_service.cpp  pipewire_audio_service.hpp
src/core/: CMakeLists.txt  config.cpp  config.hpp  i_service.hpp  logger.cpp  logger.hpp  result.hpp  ring_buffer.hpp  session.hpp  types.hpp
src/hotkey/: CMakeLists.txt  evdev_hotkey_service.cpp  evdev_hotkey_service.hpp  i_hotkey_service.hpp  modifier_state.hpp  portal_hotkey_service.cpp  portal_hotkey_service.hpp  xcb_hotkey_service.cpp  xcb_hotkey_service.hpp
src/injection/: CMakeLists.txt  i_injection_service.hpp  injection_utils.hpp  wayland_injection_service.cpp  wayland_injection_service.hpp  xdo_injection_service.cpp  xdo_injection_service.hpp
src/overlay/: CMakeLists.txt  gtk_overlay_service.cpp  gtk_overlay_service.hpp  i_overlay_service.hpp
src/recognition/: CMakeLists.txt  i_recognition_service.hpp  i_refinement_service.hpp  model_manager.cpp  model_manager.hpp  transcription_orchestrator.cpp  transcription_orchestrator.hpp  vosk_recognition_service.cpp  vosk_recognition_service.hpp  whisper_refinement_service.cpp  whisper_refinement_service.hpp
tests/: CMakeLists.txt  test_config.py  test_hotkeys.py  test_injector.py  test_text_processor.py
tests/app/: CMakeLists.txt  test_transcription_store.cpp
tests/audio/: CMakeLists.txt  test_audio_buffer.cpp
tests/core/: CMakeLists.txt  test_config.cpp  test_result.cpp  test_ring_buffer.cpp  test_session.cpp
tests/hotkey/: CMakeLists.txt  test_evdev_hotkey_service.cpp  test_portal_hotkey_service.cpp  test_xcb_hotkey_service.cpp
tests/injection/: CMakeLists.txt  test_wayland_injection.cpp  test_xdo_injection.cpp
tests/mocks/: mock_services.hpp
tests/overlay/: CMakeLists.txt  test_gtk_overlay.cpp
tests/recognition/: CMakeLists.txt  test_transcription_orchestrator.cpp  test_whisper_refinement.cpp
verbal_code/: __main__.py  app.py  audio.py  hotkey_editor.py  hotkeys.py  injector.py  transcriber.py  tray.py  vad.py
verbal_code.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
