[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "verbal-code"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "PyYAML>=6.0",
    "numpy>=1.24",
]

[project.optional-dependencies]
vosk = ["vosk>=0.3.45"]

[project.scripts]
verbal-code = "verbal_code.app:main"
