[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "verbal-code"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "PyYAML>=6.0",
    "faster-whisper>=1.0.0",
    "numpy>=1.24",
    "pynput>=1.7.6",
    "sounddevice>=0.4.6",
]

[tool.setuptools.packages.find]
include = ["verbal_code*"]

[project.optional-dependencies]
vosk = ["vosk>=0.3.45"]
vad = ["silero-vad>=5.1"]

[project.scripts]
verbal-code = "verbal_code.app:main"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
